Criando um dockerfile para a aplicação e um docker-compose para a infra

--- a/codeblog/src/main/resources/application.properties
+++ b/codeblog/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=trueblog
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Local database
-spring.datasource.url=jdbc:postgressql://localhost:5432/codeblog
+#spring.datasource.url=jdbc:postgresql://localhost:15432/codeblog
+spring.datasource.url=jdbc:postgresql://database:5432/codeblog
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
